--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+.ToDoContainer {
+  width: 50%;
+  margin: 100px auto;
   text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 0 0 20px;
+  border-bottom: 1px double #ccc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.blink {
+  animation: blinker 1s linear infinite;
+  font-size: 24px;
+  color: red;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.listItem, form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.listWrapper {
+  margin: 40px 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="text"] {
+  width: 95%;
+  padding: 5px;
+  border:1px solid #ccc;
+  color:#333;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+button {
+  width: 5%;
+  padding: 5px;
+  background-color: rgba(255, 0, 0, 0.6);
+  color: #fff;
+  font-size: 18x;
+  border:none
+}
+
+form button {
+  font-size: 25px;
+  background-color: rgba(0,255,0,0.6)
 }
